# OmniProDB

./: .gitignore  Cargo.toml  README.md  build.rs
proto/: database.proto  omnipro.proto
src/: anomaly_detection.rs  db.rs  error.rs  lib.rs  main.rs  migrations.rs  sanitizer.rs  schema.rs  security.rs  surrealml.rs  telemetry.rs
src/proto/: database.rs  mod.rs  omnipro.db.rs
src/tests/: integration_tests.rs  migration_tests.rs  performance_tests.rs  unit_tests.rs
