[package]
name = "omnipro_db"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
opentelemetry = { version = "0.21", features = ["metrics", "trace"] }
opentelemetry_sdk = { version = "0.21.1", features = ["trace", "metrics", "rt-tokio"] }
prost = "0.11"
regex = "1.7"
serde = { version = "1.0", features = ["derive"] }
surrealdb = "2.1.2"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.7", features = ["transport"] }
tracing = "0.1"
tracing-opentelemetry = "0.22"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1.2", features = ["v4"] }
serde_json = "1.0"

[build-dependencies]
tonic-build = "0.7"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
